--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,19 @@
 @import "tailwindcss";
+@tailwind utilities;
 
 @theme {
   --font-poppins: Poppins, sans-serif;
   --color-primary: #f56e13;
   --color-secondary: #135e9e;
   --color-head: #1f2f54;
+}
+
+@layer utilities {
+  input:-webkit-autofill,
+  textarea:-webkit-autofill,
+  select:-webkit-autofill {
+    @apply bg-transparent text-white shadow-none;
+    transition: background-color 100000s ease-in-out 0s;
+    -webkit-text-fill-color: white;
+  }
 }
