--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,6 @@
   select:-webkit-autofill {
     @apply bg-transparent text-white shadow-none;
     transition: background-color 100000s ease-in-out 0s;
-    -webkit-text-fill-color: white;
+    -webkit-text-fill-color: #f56e13;
   }
 }
